# ToMI

./: LICENSE  README.md  __init__.py  all.txt  pyproject.toml
examples/: 01_load_model.py  02_activation_cache.py  03_activation_patching.py  04_head_patching.py  05_false_belief_analysis.py
tests/: test_activation_cache.py  test_circuits.py  test_hooks.py  test_metrics.py  test_patching.py  test_theory_of_mind.py
tomi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tomi/activations/: __init__.py  activation_cache.py  activation_store.py  statistics.py
tomi/circuits/: __init__.py  circuit_finder.py  edge.py  graph.py  node.py
tomi/hooks/: __init__.py  cache.py  hook_manager.py  hook_point.py  naming.py
tomi/metrics/: __init__.py  belief_metrics.py  causal_effect.py  logit_diff.py
tomi/models/: __init__.py  base_model.py  llama.py  model_loader.py  pythia.py  qwen.py  registry.py
tomi/patching/: __init__.py  activation_patching.py  attribution_patching.py  head_patching.py  neuron_patching.py  residual_patching.py
tomi/theory_of_mind/: __init__.py  belief_tracking.py  evaluation.py  false_belief.py  perspective_taking.py
tomi/utils/: __init__.py  align.py  device.py  logging.py  tensor.py  tokenizer.py
tomi/visualization/: __init__.py  attention.py  circuits.py  heatmaps.py  patching.py
