[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomi"
version = "0.1.0"
description = "Theory of Mind Interpretability: A mechanistic interpretability framework for modern LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "ToMI Contributors" },
]
keywords = [
    "mechanistic-interpretability",
    "theory-of-mind",
    "transformer",
    "activation-patching",
    "llm",
    "nlp",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "datasets>=2.14.0",
    "jaxtyping>=0.2.20",
    "networkx>=3.1",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "ruff>=0.0.285",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "nbformat>=5.9.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/tomi-interpretability/tomi"
Repository = "https://github.com/tomi-interpretability/tomi"
Documentation = "https://tomi.readthedocs.io"
Issues = "https://github.com/tomi-interpretability/tomi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tomi*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
